# advent-of-code

./: .gitignore  README.md  challenge2015day6.py  challenge2022day1.py  challenge2022day2.py  challenge2022day3.py  cookiecutter.json  pyproject.toml
challenge2022day3/: challenge2022day3.py  script.py  test_2022day3.py  tests.py
challenge2022day4/: script.py  tests.py
challenge2022day5/: script.py  tests.py
challenge2022day6/: script.py  tests.py
challenge2022day7/: script.py  tests.py
challenge2022day8/: script.py  tests.py
challenge2022day9/: script.py  tests.py
tests/: test_2015day6.py  test_2022day2.py
{{cookiecutter.project_slug}}/: script.py  tests.py
